# CoS

./: README.md  add_special_token.py  pyproject.toml  test.py
eval/mathvista/: calculate_score.py  evaluate_mathvista.py  evaluate_mathvista_mine.py
eval/mmmu/: evaluate_mmmu.py
eval/scienceqa/: evaluate_m3cot.py  evaluate_mmstar.py  evaluate_scienceqa.py
eval/vqa/: evaluate_vqa.py  generate_dpo_data.py  score_with_prm.py
eval_scripts/: evaluate_ai2d.sh  evaluate_chartqa.sh  evaluate_m3cot.sh  evaluate_mathvista.sh  evaluate_mmmu.sh  evaluate_mmstar.sh  generate_dpo_data.sh  label_with_prm.sh
internvl/model/: __init__.py
internvl/model/internvl_chat/: modeling_internvl_chat.py  modeling_internvl_prm.py
internvl/train/: internvl_chat_dpo.py  internvl_chat_prm.py
shell/data/: dpo_v3.json  prm-100K-train.json  sft-330K.json
shell/internvl2.5/2nd_finetune/: finetune_38b_prm.sh  finetune_38b_prm_second.sh  internvl2_5_8b_dynamic_res_2nd_finetune_full.sh
shell/internvl2.5_mpo/preference_optimization/: 8b_dpo.sh  8b_dpo_second.sh
